Fix extra margin on top of checkboxs in row

--- a/client/src/styles/CMSLegacy.scss
+++ b/client/src/styles/CMSLegacy.scss
@@ -3,4 +3,11 @@
   .form-check-input {
     margin-left: 0;
   }
+
+  // Nested for specificity
+  .grid-field__table {
+    .form-check-input.editable-column-field {
+      margin-top: 0;
+    }
+  }
 }
